// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default transpiler 1`] = `
"\\"use strict\\";

var M = require(\\"../../api\\");

var frame = M.frame;
var brk = M.brk;
var mcall = M.mcall;
var ret = M.ret;
var unhandled = M.unhandled;
var $module = M.module(\\"test/__fixtures__/code.js\\", void 0, module),
    v_1 = [{
  mod: \\"mod\\",
  n: \\"n\\",
  k: \\"k\\",
  v0: \\"v0\\",
  C: \\"C\\"
}, null],
    v_4 = [{
  fn1: \\"fn1\\",
  v5: \\"v5\\"
}, v_1],
    v_2 = [{
  a: \\"a\\",
  v3: \\"v3\\",
  i: \\"i1\\",
  v4: \\"v4\\",
  v1: \\"v1\\",
  e: \\"e\\"
}, v_1],
    v_3 = [{
  a: \\"a\\",
  v3: \\"v3\\",
  i: \\"i1\\",
  v4: \\"v4\\",
  v1: \\"v1\\",
  e: \\"e\\",
  v2: \\"v2\\"
}, v_1],
    meta$f = M.fun($module, function (x) {
  return M.clos(x, meta$f, function f(module, exports) {
    var _$ = frame(f, this, new.target),
        p;

    _$.$.module = module;
    _$.$.exports = exports;
    _$.$.C = meta$C(_$);
    {
      _$.goto = 5;

      try {
        return _$.meta.handler(_$, void 0);
      } catch (e) {
        return M.handle(_$, e);
      }
    }
  });
}, f_1, void 0, void 0, [[[{}, null], \\"s\\", \\"1:0-1:31\\"], [v_1, \\"s\\", \\"2:0-2:33\\"], [v_1, \\"s\\", \\"3:0-3:33\\"], [v_1, \\"s\\", \\"4:0-4:4\\"], [v_1, \\"s\\", \\"5:0-5:4\\"], [v_1, \\"s\\", \\"7:0-7:12\\"], [v_1, \\"s\\", \\"25:0-28:2\\"]], \\"f\\", \\"1:0-29:0\\", null, [\\"module\\", \\"exports\\"]),
    meta$fn1 = M.fun($module, function (x) {
  return M.clos(x, meta$fn1, function fn1() {
    var $ = frame(fn1, this, new.target),
        p;
    $.$.fn1 = fn1;
    $.goto = 5;

    try {
      return $.meta.handler($, void 0);
    } catch (e) {
      return M.handle($, e);
    }
  });
}, fn1_1, void 0, void 0, [[v_4, \\"s\\", \\"26:2-26:16\\"], [v_4, \\"s\\", \\"27:2-27:55\\"]], \\"fn1\\", \\"25:14-28:1\\", meta$f, []),
    meta$C = M.fun($module, function (x) {
  return M.clos(x, meta$C, function C(a) {
    var $ = frame(C, this, new.target),
        p;
    $.$.a = a;
    $.goto = 5;

    try {
      return $.meta.handler($, void 0);
    } catch (e) {
      return M.handle($, e);
    }
  });
}, C_1, C_err, C_fin, [[v_2, \\"s\\", \\"10:2-10:14\\"], [v_2, \\"s\\", \\"11:2-22:3\\"], [v_3, \\"s\\", \\"12:4-12:18\\"], [v_3, \\"s\\", \\"13:4-13:11\\"], [v_3, \\"s\\", \\"14:4-14:42\\"], [v_3, \\"s\\", \\"15:4-17:5\\"], [[{
  a: \\"a\\",
  v3: \\"v3\\",
  i: \\"i\\",
  v4: \\"v4\\",
  v1: \\"v1\\",
  e: \\"e\\",
  v2: \\"v2\\"
}, v_1], \\"s\\", \\"16:6-16:19\\"], [v_3, \\"s\\", \\"18:4-18:42\\"], [v_3, \\"s\\", \\"18:29-18:42\\"], [v_3, \\"s\\", \\"19:4-19:17\\"], [v_2, \\"s\\", \\"21:4-21:24\\"]], \\"C\\", \\"9:0-23:1\\", meta$f, [\\"a\\"]);
module.exports = M.wrapExport(meta$f(null));

function C_err(s) {
  switch (s) {
    case 7:
    case 8:
    case 9:
    case 10:
    case 11:
    case 12:
    case 13:
    case 18:
    case 19:
    case 24:
    case 25:
      return 30;

    case 14:
    case 15:
    case 16:
      return 31;

    case 17:
      return 33;

    case 20:
    case 21:
    case 22:
      return 34;

    case 23:
      return 36;

    default:
      return 1;
  }
}

function C_fin(s) {
  switch (s) {
    case 14:
    case 15:
    case 16:
      return 32;

    case 20:
    case 21:
    case 22:
      return 35;

    default:
      return 0;
  }
}

function C_1($, p) {
  var a, b;

  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        brk(0);
        $.state = 6;

      case 6:
        $.$.v1 = 10;
        $.goto = 7;
        brk(1);
        $.state = 7;

      case 7:
        $.goto = 8;
        brk(2);
        $.state = 8;

      case 8:
        $.$.v2 = 11;
        $.goto = 9;
        brk(3);
        $.state = 9;

      case 9:
        $.goto = 10;
        brk(4);
        $.state = 10;

      case 10:
        $.goto = 11;
        p = mcall(\\"fn1\\", $.$$.$.mod, $.$.a);
        $.state = 11;

      case 11:
        $.goto = 12;
        mcall(\\"proc1\\", $.$$.$.mod, p, $.$$.$.v0, $.$.v1, $.$.v2, $.$.v3);
        $.state = 12;

      case 12:
        $.goto = 13;
        brk(5);
        $.state = 13;

      case 13:
        $.$.loop = M.iterator(something);
        $.goto = 14;
        $.state = 14;

      case 14:
        $.goto = 15;
        p = mcall(\\"next\\", $.$.loop);
        $.state = 15;

      case 15:
        b = $.$.i2 = p;
        a = b.done;

        if (!a) {
          $.$.i = $.$.i2.value;
          $.goto = 16;
          brk(6);
          $.state = 16;
        } else {
          $.$.fc = 18;
          $.goto = 17;
          continue;
        }

      case 16:
        $.goto = 14;
        mcall(\\"proc2\\", $.$$.$.mod, $.$.i);
        continue;

      case 17:
        if ($.$.loop.return) {
          $.$.ex = $.$.err1;
          $.goto = $.$.fc;
          mcall(\\"return\\", $.$.loop);
          continue;
        } else {
          $.$.ex = $.$.err1;
          $.goto = $.$.fc;
          continue;
        }

      case 18:
        $.goto = 19;
        brk(7);
        $.state = 19;

      case 19:
        $.$.loop1 = M.iterator(something);
        $.goto = 20;
        $.state = 20;

      case 20:
        $.goto = 21;
        p = mcall(\\"next\\", $.$.loop1);
        $.state = 21;

      case 21:
        b = $.$.i3 = p;
        a = b.done;

        if (!a) {
          $.$.i1 = $.$.i3.value;
          $.goto = 22;
          brk(8);
          $.state = 22;
        } else {
          $.$.fc1 = 24;
          $.goto = 23;
          continue;
        }

      case 22:
        $.goto = 20;
        mcall(\\"proc3\\", $.$$.$.mod, $.$.i1);
        continue;

      case 23:
        if ($.$.loop1.return) {
          $.$.ex = $.$.err2;
          $.goto = $.$.fc1;
          mcall(\\"return\\", $.$.loop1);
          continue;
        } else {
          $.$.ex = $.$.err2;
          $.goto = $.$.fc1;
          continue;
        }

      case 24:
        $.goto = 25;
        brk(9);
        $.state = 25;

      case 25:
        $.$.v4 = 100;
        $.goto = 28;
        continue;

      case 26:
        $.$.e = $.$.ex;
        $.goto = 27;
        brk(10);
        $.state = 27;

      case 27:
        $.goto = 28;
        mcall(\\"proc4\\", $.$$.$.mod, $.$.e, $.$.v4, $.$.i1);
        $.state = 28;

      case 28:
        return ret();

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      case 29:
        $.goto = 0;
        p = $.$.r;
        continue;

      case 30:
        $.$.ex = p;
        $.goto = 26;
        continue;

      case 31:
        $.$.fc = 26, $.$.err1 = p;
        $.goto = 17;
        continue;

      case 32:
        $.$.fc = 29, $.$.r = p;
        $.goto = 17;
        continue;

      case 33:
        $.$.ex = p;
        $.goto = 26;
        continue;

      case 34:
        $.$.fc1 = 26, $.$.err2 = p;
        $.goto = 23;
        continue;

      case 35:
        $.$.fc1 = 29, $.$.r = p;
        $.goto = 23;
        continue;

      case 36:
        $.$.ex = p;
        $.goto = 26;
        continue;

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}

function fn1_1($, p) {
  var a;

  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        brk(0);
        $.state = 6;

      case 6:
        $.$.v5 = 10;
        $.goto = 7;
        brk(1);
        $.state = 7;

      case 7:
        $.goto = 8;
        p = mcall(\\"f2\\", $.$$.$.mod);
        $.state = 8;

      case 8:
        $.$._ = p;
        a = $.$$.$.C;
        $.goto = 9;
        p = new (M.context.call = a)($.$$.$.v0, $.$.v5);
        $.state = 9;

      case 9:
        $.goto = 10;
        p = mcall(\\"some\\", $.$$.$.mod, {
          a: $.$._,
          b: [p]
        });
        $.state = 10;

      case 10:
        return ret(p);

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}

function f_1(_$, p) {
  var a;

  for (;;) {
    switch (_$.state = _$.goto) {
      case 5:
        _$.goto = 6;
        brk(0);
        _$.state = 6;

      case 6:
        a = (M.context.moduleId = require.resolve(\\"mod\\"), require(\\"mod\\"));
        _$.goto = 7;
        p = M.unwrapImport(a);
        _$.state = 7;

      case 7:
        ({
          mod: _$.$.mod
        } = p);
        _$.goto = 8;
        brk(1);
        _$.state = 8;

      case 8:
        a = (M.context.moduleId = require.resolve(\\"mod2_\\" + _$.$.mod), require(\\"mod2_\\" + _$.$.mod));
        _$.goto = 9;
        p = M.unwrapImport(a);
        _$.state = 9;

      case 9:
        _$.$.n = p;
        _$.goto = 10;
        brk(2);
        _$.state = 10;

      case 10:
        a = (M.context.modulePath = \\"mod3_\\" + _$.$.n.n, $.moduleId = require.resolve(M.context.modulePath), require(M.context.modulePath));
        _$.goto = 11;
        p = M.unwrapImport(a);
        _$.state = 11;

      case 11:
        _$.$.k = p;
        _$.goto = 12;
        brk(3);
        _$.state = 12;

      case 12:
        _$.goto = 13;

        (M.context.call = _$.$.k)();

        _$.state = 13;

      case 13:
        _$.goto = 14;
        brk(4);
        _$.state = 14;

      case 14:
        _$.goto = 15;

        (M.context.call = _$.$.n)();

        _$.state = 15;

      case 15:
        _$.goto = 16;
        brk(5);
        _$.state = 16;

      case 16:
        _$.$.v0 = 10;
        _$.goto = 17;
        brk(6);
        _$.state = 17;

      case 17:
        _$.goto = 18;
        _$.$.exports.fn2 = meta$fn1(_$);
        _$.state = 18;

      case 18:
        return ret();

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}"
`;

exports[`default transpiler 2`] = `
"\\"use strict\\";

var M = require(\\"../../api\\");

var frame = M.frame;
var brk = M.brk;
var mcall = M.mcall;
var ret = M.ret;
var unhandled = M.unhandled;
var $module = M.module(\\"test/__fixtures__/mod1.js\\", void 0, module),
    v_1 = [{
  j: \\"j\\",
  run: \\"run\\"
}, null],
    v_2 = [{
  i: \\"i\\"
}, v_1],
    meta$f = M.fun($module, function (x) {
  return M.clos(x, meta$f, function f(module, exports) {
    var $ = frame(f, this, new.target),
        p;
    $.$.module = module;
    $.$.exports = exports;
    $.$.run = meta$run($);
    {
      $.goto = 5;

      try {
        return $.meta.handler($, void 0);
      } catch (e) {
        return M.handle($, e);
      }
    }
  });
}, f_1, void 0, void 0, [[[{}, null], \\"s\\", \\"1:0-1:29\\"], [v_1, \\"s\\", \\"3:0-3:10\\"], [v_1, \\"s\\", \\"12:0-12:6\\"], [v_1, \\"s\\", \\"13:0-13:6\\"]], \\"f\\", \\"1:0-14:0\\", null, [\\"module\\", \\"exports\\"]),
    meta$run = M.fun($module, function (x) {
  return M.clos(x, meta$run, function run(i = 1) {
    var $ = frame(run, this, new.target),
        p;
    $.$.i = i;
    $.goto = 5;

    try {
      return $.meta.handler($, void 0);
    } catch (e) {
      return M.handle($, e);
    }
  });
}, run_1, void 0, void 0, [[v_2, \\"s\\", \\"6:2-6:9\\"], [v_2, \\"s\\", \\"7:2-7:23\\"], [v_2, \\"s\\", \\"8:2-8:9\\"], [v_2, \\"s\\", \\"9:2-9:31\\"]], \\"run\\", \\"5:7-10:1\\", meta$f, [\\"i\\"]);
module.exports = M.wrapExport(meta$f(null));

function run_1($, p) {
  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        brk(0);
        $.state = 6;

      case 6:
        $.$$.$.j = $.$$.$.j + $.$.i;
        $.goto = 7;
        brk(1);
        $.state = 7;

      case 7:
        $.goto = 8;
        p = mcall(\\"f1\\", $.$$.$.M2, ($.$._ = $.$.i, $.$.i = $.$._ + 1, $.$._));
        $.state = 8;

      case 8:
        $.goto = 9;
        mcall(\\"f2\\", $.$$.$.M2, p, $.$.i);
        $.state = 9;

      case 9:
        $.goto = 10;
        brk(2);
        $.state = 10;

      case 10:
        $.$$.$.j = $.$$.$.j + $.$.i;
        $.goto = 11;
        brk(3);
        $.state = 11;

      case 11:
        $.goto = 12;
        mcall(\\"log\\", console, \`i:\${$.$.i},j:\${$.$$.$.j}\`);
        $.state = 12;

      case 12:
        return ret();

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}

function f_1($, p) {
  var a;

  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        $.$.exports.__esModule = true;
        $.state = 6;

      case 6:
        $.goto = 7;
        $.$.exports.run = $.$.run;
        $.state = 7;

      case 7:
        $.goto = 8;
        brk(0);
        $.state = 8;

      case 8:
        a = (M.context.moduleId = require.resolve(\\"./mod2\\"), require(\\"./mod2\\"));
        $.goto = 9;
        p = M.unwrapImport(a);
        $.state = 9;

      case 9:
        $.$.M2 = p;
        $.goto = 10;
        brk(1);
        $.state = 10;

      case 10:
        $.$.j = 0;
        $.goto = 11;
        brk(2);
        $.state = 11;

      case 11:
        $.goto = 12;
        (M.context.call = $.$.run)();
        $.state = 12;

      case 12:
        $.goto = 13;
        brk(3);
        $.state = 13;

      case 13:
        $.goto = 14;
        (M.context.call = $.$.run)();
        $.state = 14;

      case 14:
        return ret();

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}"
`;

exports[`default transpiler 3`] = `
"\\"use strict\\";

var M = require(\\"../../api\\");

var frame = M.frame;
var brk = M.brk;
var ret = M.ret;
var unhandled = M.unhandled;
var mcall = M.mcall;
var $module = M.module(\\"test/__fixtures__/mod2.js\\", void 0, module),
    v_1 = [{
  cnt: \\"cnt\\",
  A: \\"A\\",
  B: \\"B\\",
  f1: \\"f1\\",
  f2: \\"f2\\"
}, null],
    v_5 = [{
  i: \\"i\\"
}, v_1],
    v_4 = [{
  i: \\"i\\",
  a: \\"a\\"
}, v_1],
    v_3 = [{
  i: \\"i\\"
}, v_1],
    v_2 = [{
  i: \\"i\\"
}, v_1],
    meta$f = M.fun($module, function (x) {
  return M.clos(x, meta$f, function f(module, exports) {
    var $ = frame(f, this, new.target),
        p;
    $.$.module = module;
    $.$.exports = exports;
    $.$.A = meta$A($);
    $.$.B = meta$B($);
    $.$.f1 = meta$f1($);
    $.$.f2 = meta$f2($);
    {
      $.goto = 5;

      try {
        return $.meta.handler($, void 0);
      } catch (e) {
        return M.handle($, e);
      }
    }
  });
}, f_1, void 0, void 0, [[[{}, null], \\"s\\", \\"1:0-1:12\\"]], \\"f\\", \\"1:0-25:0\\", null, [\\"module\\", \\"exports\\"]),
    meta$f2 = M.fun($module, function (x) {
  return M.clos(x, meta$f2, function f2(i) {
    var $ = frame(f2, this, new.target),
        p;
    $.$.i = i;
    $.goto = 5;

    try {
      return $.meta.handler($, void 0);
    } catch (e) {
      return M.handle($, e);
    }
  });
}, f2_1, void 0, void 0, [[v_5, \\"s\\", \\"22:2-22:8\\"], [v_5, \\"s\\", \\"23:2-23:32\\"]], \\"f2\\", \\"21:7-24:1\\", meta$f, [\\"i\\"]),
    meta$f1 = M.fun($module, function (x) {
  return M.clos(x, meta$f1, function f1(i) {
    var $ = frame(f1, this, new.target),
        p;
    $.$.i = i;
    $.goto = 5;

    try {
      return $.meta.handler($, void 0);
    } catch (e) {
      return M.handle($, e);
    }
  });
}, f1_1, void 0, void 0, [[v_4, \\"s\\", \\"14:2-14:8\\"], [v_4, \\"s\\", \\"15:2-15:32\\"], [v_4, \\"s\\", \\"16:2-16:23\\"], [v_4, \\"s\\", \\"17:2-17:23\\"], [v_4, \\"s\\", \\"18:2-18:13\\"]], \\"f1\\", \\"13:7-19:1\\", meta$f, [\\"i\\"]),
    meta$B = M.fun($module, function (x) {
  return M.clos(x, meta$B, function B(i) {
    var $ = frame(B, this, new.target),
        p;
    $.$.i = i;
    $.$._this = this;
    $.goto = 5;

    try {
      return $.meta.handler($, void 0);
    } catch (e) {
      return M.handle($, e);
    }
  });
}, B_1, void 0, void 0, [[v_3, \\"s\\", \\"9:2-9:13\\"], [v_3, \\"s\\", \\"10:2-10:26\\"]], \\"B\\", \\"8:0-11:1\\", meta$f, [\\"i\\"]),
    meta$A = M.fun($module, function (x) {
  return M.clos(x, meta$A, function A(i) {
    var $ = frame(A, this, new.target),
        p;
    $.$.i = i;
    $.$._this = this;
    $.goto = 5;

    try {
      return $.meta.handler($, void 0);
    } catch (e) {
      return M.handle($, e);
    }
  });
}, A_1, void 0, void 0, [[v_2, \\"s\\", \\"4:2-4:24\\"], [v_2, \\"s\\", \\"5:2-5:22\\"]], \\"A\\", \\"3:0-6:1\\", meta$f, [\\"i\\"]);
module.exports = M.wrapExport(meta$f(null));

function A_1($, p) {
  var a;

  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        brk(0);
        $.state = 6;

      case 6:
        $.goto = 7;
        $.self.i = $.$.i * 10 + $.$$.$.cnt;
        $.state = 7;

      case 7:
        $.goto = 8;
        brk(1);
        $.state = 8;

      case 8:
        a = $.$$.$.B;
        $.goto = 9;
        p = new (M.context.call = a)(100);
        $.state = 9;

      case 9:
        $.goto = 10;
        $.self.b = p;
        $.state = 10;

      case 10:
        return ret();

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}

function B_1($, p) {
  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        brk(0);
        $.state = 6;

      case 6:
        $.goto = 7;
        $.self.i = $.$.i;
        $.state = 7;

      case 7:
        $.goto = 8;
        brk(1);
        $.state = 8;

      case 8:
        return ret({
          b: $.self,
          cnt: $.$$.$.cnt
        });

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}

function f1_1($, p) {
  var a, b;

  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        brk(0);
        $.state = 6;

      case 6:
        $.$$.$.cnt = $.$$.$.cnt + 1;
        $.goto = 7;
        brk(1);
        $.state = 7;

      case 7:
        $.goto = 8;
        mcall(\\"log\\", console, \`f1:\${$.$.i}@\${$.$$.$.cnt}\`);
        $.state = 8;

      case 8:
        $.goto = 9;
        brk(2);
        $.state = 9;

      case 9:
        a = $.$$.$.A;
        b = $.$$.$.cnt;
        $.goto = 10;
        p = new (M.context.call = a)(b);
        $.state = 10;

      case 10:
        $.$.a = p;
        $.goto = 11;
        brk(3);
        $.state = 11;

      case 11:
        $.goto = 12;
        mcall(\\"log\\", console, \\"A:\\", $.$.a);
        $.state = 12;

      case 12:
        $.goto = 13;
        brk(4);
        $.state = 13;

      case 13:
        return ret($.$$.$.cnt);

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}

function f2_1($, p) {
  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        brk(0);
        $.state = 6;

      case 6:
        $.$$.$.cnt = $.$$.$.cnt + 1;
        $.goto = 7;
        brk(1);
        $.state = 7;

      case 7:
        $.goto = 8;
        mcall(\\"log\\", console, \`f2:\${$.$.i}@\${$.$$.$.cnt}\`);
        $.state = 8;

      case 8:
        return ret();

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}

function f_1($, p) {
  for (;;) {
    switch ($.state = $.goto) {
      case 5:
        $.goto = 6;
        $.$.exports.__esModule = true;
        $.state = 6;

      case 6:
        $.goto = 7;
        $.$.exports.f1 = $.$.f1;
        $.state = 7;

      case 7:
        $.goto = 8;
        $.$.exports.f2 = $.$.f2;
        $.state = 8;

      case 8:
        $.goto = 9;
        brk(0);
        $.state = 9;

      case 9:
        $.$.cnt = 0;
        return ret();

      case 0:
        return ret(p);

      case 1:
        return unhandled(p);

      default:
        throw new Error(\\"invalid state\\");
    }
  }
}"
`;
